Fix leap day with UTC offset [Bug #18274]

`struct vtm::year` is a Ruby integer instance, but not a C integer
type.